layout + scrollbar issues

--- a/components/common/RightSideBar/RightSideBar.module.scss
+++ b/components/common/RightSideBar/RightSideBar.module.scss
@@ -6,7 +6,7 @@
   align-items: stretch;
   max-width: 22%;
   width: 22%;
-  min-width: 224px;
+  min-width: 316px;
 
   &__collapsed {
     width: 40px;
